# defold.nvim

./: .clippy.toml  .gitattributes  .gitignore  .luacheckrc  .styluaignore  Cargo.toml  Justfile  LICENSE  README.md  bb.edn  neovim-defold.sh  package.json  shell.nix
.github/workflows/: release.yml  test.yml  update-defold-api.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: launcher.rs  main.rs  neovide.rs  plugin_config.rs  terminals.rs  utils.rs
crates/core/: Cargo.toml
crates/core/assets/: run_linux.sh  run_macos.sh  run_windows.bat
crates/core/src/: bridge.rs  cache.rs  defold_annotations.rs  editor.rs  editor_config.rs  focus.rs  game_project.rs  github.rs  lib.rs  mobdap.rs  neovide.rs  nvim_server.rs  path.rs  project.rs  release_downloader.rs  script_api.rs  utils.rs
crates/sidecar/: Cargo.toml  build.rs
crates/sidecar/assets/: run_linux.sh  run_macos.sh  run_windows.bat
crates/sidecar/src/: editor.rs  editor_config.rs  lib.rs
data/defold_api/: b2d.body.lua  bit.lua  buffer.lua  graphics.lua  html5.lua  http.lua  label.lua  liveupdate.lua  meta.lua  model.lua  msg.lua  particlefx.lua  physics.lua  profiler.lua  render.lua  resource.lua  sound.lua  sprite.lua  sys.lua  window.lua
lua/defold/: editor.lua  health.lua  init.lua  project.lua  sidecar.lua  utils.lua
lua/defold/config/: filetype.lua  lsp.lua
lua/defold/service/: babashka.lua  debugger.lua  deps.lua  fs.lua  github.lua  http.lua  icons.lua  logger.lua  os.lua  script_api.lua  snippets.lua  zip.lua
plugin/: defold.lua
resources/defold_api/: .lua  b2d.body.lua  b2d.lua  bit.lua  buffer.lua  builtins.lua  camera.lua  collectionfactory.lua  collectionproxy.lua  crash.lua  editor.lua  factory.lua  font.lua  go.lua  graphics.lua  gui.lua  html5.lua  http.lua  image.lua  json.lua  label.lua  liveupdate.lua  meta.lua  model.lua  msg.lua  particlefx.lua  physics.lua  profiler.lua  render.lua  resource.lua  socket.lua  sound.lua  sprite.lua  sys.lua  tilemap.lua  timer.lua  types.lua  vmath.lua  window.lua  zlib.lua
scripts/: compile-script-api.clj  update-defold-api.clj
snippets/lua/: defold.json
src/: error.rs  game_project.rs  lib.rs
src/defold/: constants.clj  debugger.clj  editor.clj  editor_config.clj  focus.clj  launcher.clj  logging.clj  main.clj  mini.clj  neovide.clj  project.clj  script_api_compiler.clj  utils.clj
src/defold/tasks/: script_api_compiler.clj
