[package]
name = "defold-nvim-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
defold-nvim-core = { path = "../core" }
dirs = "6.0.0"
flate2 = "1.1.5"
netstat2 = "0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
version-compare = "0.2.1"
which = "8.0.0"
zip = "6.0.0"
