[package]
name = "defold-nvim-sidecar"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
defold-nvim-core = { path = "../core" }
dirs = "6.0.0"
edn-rs = "0.18.0"
mlua = { version = "0.11.5", features = [
  "module",
  "luajit",
  "serde",
  "anyhow",
] }
netstat2 = "0.11.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
