[package]
name = "defold-nvim-sidecar"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
defold-nvim-core = { path = "../core" }
dirs = "6.0.0"
mlua = { version = "0.11.5", features = [
    "module",
    "luajit",
    "serde",
    "anyhow",
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
